--- a/files/webMall.css
+++ b/files/webMall.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 html {
-  color: #666;
+  color: #333;
   background: #EAEDED;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
@@ -51,7 +51,7 @@ button,
 input,
 select,
 textarea {
-  font: 16px/1 "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
+  font: 16px/1.5 "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
 }
 input,
 select,
@@ -310,6 +310,7 @@ body {
 }
 .ui-row {
   margin-bottom: 10px;
+  display: flex;
   *zoom: 1;
 }
 .ui-row:after {
@@ -320,9 +321,15 @@ body {
   content: " ";
   font-size: 0;
 }
+.ui-row label {
+  color: #666;
+}
+.ui-row.ui-row-note {
+  font-size: 12px;
+}
 .ui-hr {
   border-bottom: 1px solid #ccc;
-  margin: 6px 0 10px;
+  margin: 10px 0;
 }
 .ui-red-line {
   border-bottom: 1px dashed #D22B13;
@@ -345,7 +352,7 @@ body {
   width: 693px;
 }
 .ui-money-color {
-  color: #ff4400;
+  color: #fb7823;
 }
 .ui-canot-use-color {
   color: #6091b7;
@@ -356,12 +363,12 @@ body {
   margin-right: 3px;
 }
 .ui-money-num {
-  color: #ff4400;
+  color: #fb7823;
   font: normal 24px/20px tahoma, arial, "Microsoft Yahei", "\9ED1\4F53";
   margin: 0 4px;
 }
 .ui-money-num-s {
-  color: #ff4400;
+  color: #fb7823;
   font: normal 16px/20px tahoma, arial, "Microsoft Yahei", "\9ED1\4F53";
   margin: 0 2px;
 }
@@ -529,13 +536,14 @@ body {
   color: #444;
   background: #fff2f4 url("../img/bg/icons.png?v=20131023") 4px -166px no-repeat;
 }
-html {
+body {
   min-width: 320px;
   max-width: 480px;
   margin: 0 auto;
 }
 .pg-body {
   padding: 16px;
+  overflow: hidden;
 }
 .pg-toolbar {
   border-bottom: 1px solid #98010d;
@@ -564,8 +572,8 @@ html {
 }
 .input {
   background: #fff;
-  padding: 10px 12px;
-  width: 100%;
+  padding: 8px 12px;
+  flex: 1;
   border-radius: 2px;
   border: 1px solid #ccc;
   box-sizing: border-box;
@@ -573,75 +581,83 @@ html {
 }
 /*
 .icon_input{
-	background: none;
-	padding: 12px;
-	width: 100%;
-	border-radius: 2px;
-	box-sizing: border-box;
+  background: none;
+  padding: 12px;
+  width: 100%;
+  border-radius: 2px;
+  box-sizing: border-box;
 }
 
 .input_white , .icon_input_white{
-	color: #333;
-	background: #f9f9f9;
-	-moz-box-shadow: inset 0px 1px 4px rgba(0,0,0,.2);
-	-webkit-box-shadow: inset 0px 1px 4px rgba(0,0,0,.2);
-	box-shadow: inset 0px 1px 4px rgba(0,0,0,.2);
+  color: #333;
+  background: #f9f9f9;
+  -moz-box-shadow: inset 0px 1px 4px rgba(0,0,0,.2);
+  -webkit-box-shadow: inset 0px 1px 4px rgba(0,0,0,.2);
+  box-shadow: inset 0px 1px 4px rgba(0,0,0,.2);
 }
 
 .input_group{
-	
+  
 }
 .input_group > .input , .icon_input_group > .icon_input{
-	-moz-border-radius: 0;
-	-webkit-border-radius: 0;
-	border-radius: 0;
-	margin-top:  -1px;
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  border-radius: 0;
+  margin-top:  -1px;
 }
 
 .input_group > .input:first-child , .icon_input_group > .icon_input:first-child{
-	-moz-border-radius: .6em .6em 0 0;
-	-webkit-border-radius: .6em .6em 0 0;
-	border-radius: .6em .6em 0 0;
+  -moz-border-radius: .6em .6em 0 0;
+  -webkit-border-radius: .6em .6em 0 0;
+  border-radius: .6em .6em 0 0;
 }
 .input_group > .input:last-child , .icon_input_group > .icon_input:last-child{
-	-moz-border-radius:  0 0 .6em .6em;
-	-webkit-border-radius:0 0 .6em .6em;
-	border-radius: 0 0 .6em .6em;
+  -moz-border-radius:  0 0 .6em .6em;
+  -webkit-border-radius:0 0 .6em .6em;
+  border-radius: 0 0 .6em .6em;
 }
 
 
 .icon_input{
-	position: relative;
-	padding: 0 2em;
+  position: relative;
+  padding: 0 2em;
 }
 .icon_input > input{
-	background: none;
-	width: 100%;
-	padding: 0.8em 0;
-	box-sizing: border-box;
+  background: none;
+  width: 100%;
+  padding: 0.8em 0;
+  box-sizing: border-box;
 }
 .icon_input > .input_icon{
-	position: absolute;
-	background: gray;
-	width: 16px;
-	height: 16px;
-	left: 6px;
-	top: 50%;
-	margin-top: -8px;
+  position: absolute;
+  background: gray;
+  width: 16px;
+  height: 16px;
+  left: 6px;
+  top: 50%;
+  margin-top: -8px;
 }
 .input_with_del_btn{
-	position: relative;
+  position: relative;
 }
 .input_del_btn{
-	display: none;
-	position: absolute;
-	top: 50%;
-	margin-top: -12px;
-	right: 12px;
-	width: 24px;
-	height: 24px;
-	background: gray;
-	-webkit-border-radius: 18px;
+  display: none;
+  position: absolute;
+  top: 50%;
+  margin-top: -12px;
+  right: 12px;
+  width: 24px;
+  height: 24px;
+  background: gray;
+  -webkit-border-radius: 18px;
     -moz-border-radius: 18px;
     border-radius: 18px;
 }*/
+.choice-list .c-item {
+  background: #fff;
+  padding: 8px 12px;
+  border-radius: 2px;
+  border: 1px solid #ccc;
+  position: relative;
+  margin-bottom: 10px;
+}
