--- a/files/webMall.css
+++ b/files/webMall.css
@@ -310,7 +310,6 @@ body {
 }
 .ui-row {
   margin-bottom: 10px;
-  display: flex;
   *zoom: 1;
 }
 .ui-row:after {
@@ -573,7 +572,7 @@ body {
 .input {
   background: #fff;
   padding: 8px 0;
-  flex: 1;
+  width: 100%;
   border-radius: 2px;
   border: 1px solid #ccc;
   box-sizing: border-box;
