--- a/files/webMall.css
+++ b/files/webMall.css
@@ -126,7 +126,7 @@ sub {
   bottom: -0.25em;
 }
 a:hover {
-  text-decoration: underline;
+  text-decoration: none;
 }
 a {
   outline: none;
@@ -581,75 +581,75 @@ body {
 }
 /*
 .icon_input{
-  background: none;
-  padding: 12px;
-  width: 100%;
-  border-radius: 2px;
-  box-sizing: border-box;
+	background: none;
+	padding: 12px;
+	width: 100%;
+	border-radius: 2px;
+	box-sizing: border-box;
 }
 
 .input_white , .icon_input_white{
-  color: #333;
-  background: #f9f9f9;
-  -moz-box-shadow: inset 0px 1px 4px rgba(0,0,0,.2);
-  -webkit-box-shadow: inset 0px 1px 4px rgba(0,0,0,.2);
-  box-shadow: inset 0px 1px 4px rgba(0,0,0,.2);
+	color: #333;
+	background: #f9f9f9;
+	-moz-box-shadow: inset 0px 1px 4px rgba(0,0,0,.2);
+	-webkit-box-shadow: inset 0px 1px 4px rgba(0,0,0,.2);
+	box-shadow: inset 0px 1px 4px rgba(0,0,0,.2);
 }
 
 .input_group{
-  
+	
 }
 .input_group > .input , .icon_input_group > .icon_input{
-  -moz-border-radius: 0;
-  -webkit-border-radius: 0;
-  border-radius: 0;
-  margin-top:  -1px;
+	-moz-border-radius: 0;
+	-webkit-border-radius: 0;
+	border-radius: 0;
+	margin-top:  -1px;
 }
 
 .input_group > .input:first-child , .icon_input_group > .icon_input:first-child{
-  -moz-border-radius: .6em .6em 0 0;
-  -webkit-border-radius: .6em .6em 0 0;
-  border-radius: .6em .6em 0 0;
+	-moz-border-radius: .6em .6em 0 0;
+	-webkit-border-radius: .6em .6em 0 0;
+	border-radius: .6em .6em 0 0;
 }
 .input_group > .input:last-child , .icon_input_group > .icon_input:last-child{
-  -moz-border-radius:  0 0 .6em .6em;
-  -webkit-border-radius:0 0 .6em .6em;
-  border-radius: 0 0 .6em .6em;
+	-moz-border-radius:  0 0 .6em .6em;
+	-webkit-border-radius:0 0 .6em .6em;
+	border-radius: 0 0 .6em .6em;
 }
 
 
 .icon_input{
-  position: relative;
-  padding: 0 2em;
+	position: relative;
+	padding: 0 2em;
 }
 .icon_input > input{
-  background: none;
-  width: 100%;
-  padding: 0.8em 0;
-  box-sizing: border-box;
+	background: none;
+	width: 100%;
+	padding: 0.8em 0;
+	box-sizing: border-box;
 }
 .icon_input > .input_icon{
-  position: absolute;
-  background: gray;
-  width: 16px;
-  height: 16px;
-  left: 6px;
-  top: 50%;
-  margin-top: -8px;
+	position: absolute;
+	background: gray;
+	width: 16px;
+	height: 16px;
+	left: 6px;
+	top: 50%;
+	margin-top: -8px;
 }
 .input_with_del_btn{
-  position: relative;
+	position: relative;
 }
 .input_del_btn{
-  display: none;
-  position: absolute;
-  top: 50%;
-  margin-top: -12px;
-  right: 12px;
-  width: 24px;
-  height: 24px;
-  background: gray;
-  -webkit-border-radius: 18px;
+	display: none;
+	position: absolute;
+	top: 50%;
+	margin-top: -12px;
+	right: 12px;
+	width: 24px;
+	height: 24px;
+	background: gray;
+	-webkit-border-radius: 18px;
     -moz-border-radius: 18px;
     border-radius: 18px;
 }*/
@@ -660,4 +660,45 @@ body {
   border: 1px solid #ccc;
   position: relative;
   margin-bottom: 10px;
+}
+.choice-list .c-content strong {
+  color: #333;
+  font-size: 18px;
+  font-weight: normal;
+}
+.choice-list .c-content .sub {
+  color: #999;
+  font-size: 14px;
+  margin-left: 16px;
+}
+.choice-list .c-arrow {
+  position: absolute;
+  right: 16px;
+  top: 8px;
+}
+.icon-alipay {
+  display: inline-block;
+  background-image: url("../img/icon.png?v=20131023");
+  vertical-align: middle;
+  width: 30px;
+  height: 20px;
+  margin-right: 10px;
+  background-position: 0 0;
+}
+.icon-unionpay {
+  display: inline-block;
+  background-image: url("../img/icon.png?v=20131023");
+  vertical-align: middle;
+  width: 30px;
+  height: 20px;
+  margin-right: 10px;
+  background-position: 0 -30px;
+}
+.icon-arrow-right {
+  display: inline-block;
+  background-image: url("../img/icon.png?v=20131023");
+  vertical-align: middle;
+  width: 12px;
+  height: 20px;
+  background-position: 0 -60px;
 }
